
=======================================================================

        ___  _____ ____
__   __/ _ \|___  |___ \
\ \ / / | | |  / /  __) |         (unamed)
 \ V /| |_| | / /  / __/
  \_/  \___(_)_/  |_____|         (unreleased)

TransTractor:
 * Remove one source of supirious error reports when writing files (GitHub's #494) [Mt].

Markdown:
 * Treat tables as verbatim paragraphs (GitHub's #496) [Mt].

Asciidoc:
 * Support a cleanspaces option to remove extra spaces in wrapped lines
   (GitHub's #464). Thanks Jean-Noël Avila for the pull request.

All scripts:
 * Add an option -w/--width to rewrap text on an arbitrary column (GitHub's #474)
   [Golubev Alexander].

po4a main script only:
 * Fix the behavior of --translate-only (GitHub's #482) [Mt & Golubev Alexander].

Documentation:
 * Fix typos (GitHub's #478) [Marco Ciampa & Helge Kreutzmann]
 * Kill outdated documentation on Pod parameters (GitHub's #462) [Golubev Alexander].

=======================================================================
        ___  _____ _
__   __/ _ \|___  / |
\ \ / / | | |  / /| |             Happy leap day
 \ V /| |_| | / / | |
  \_/  \___(_)_/  |_|             (released on 2024/02/29)

po4a main script:
 * Fix the parsing of nested simple and double quotes mixed with escaped
   spaces (GitHub's #475) [Mt].
 * Properly parse config files iteratively redefining the same alias to 
   enrich it (GitHub's #477) [Mt].
 * Don't eat up quotes around parameters containing spaces, as they are needed
   later on when passing parameters to msgmerge and friends (GitHub's #455)
   [gemmaro].

Gemtext:
 * New module (GitHub's #466) [gemmaro].

Documentation:
 * Fix many typos introduced in previous release [Golubev Alexander
   and Rafael Fontenelle].

General:
 * Better error messages on encoding errors. It remains fragile, but at least we 
   try to display an error message (also GitHub's #477) [Mt].

Translations:
 * Updated: Chinese (simplified), thanks Wenbin Lv.