@@ -36,3 +36,10 @@ b\fPa\fPr
 .BR foo\c
  b\fPa\fPr
 
+.TP
+foo\c
+bar \c
+baz
+
+.RB [ \-d\~\c
+.IR ctext ]
