@@ -33,3 +33,7 @@ foo b\fIa\fPr
 
 \fBfoo\fP b\fBa\fPr
 
+.TP 
+foobar baz
+
+[\fB\-d\ \fP\fIctext\fP]
