@@ -33,3 +33,7 @@ FOO B\fIA\fPR
 
 \fBFOO\fP B\fBA\fPR
 
+.TP 
+FOOBAR BAZ
+
+[\fB\-D\ \fP\fICTEXT\fP]
