@@ -12,6 +12,10 @@ __   __/ _ \|___  |___ \
 TransTractor:
  * Remove one source of supirious error reports when writing files (GitHub's #494) [Mt].
 
+Man/Groff:
+ * Handle \~ as non-breaking space.
+ * Properly handle \c escape sequence in .TP parameters (Debian's #1036826) [Mt].
+
 Markdown:
  * Treat tables as verbatim paragraphs (GitHub's #496) [Mt].
 
